--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
         <div class="controls">
             <button id="refreshBtn">Refresh Data</button>
             <button id="exportBtn">Export CSV</button>
+            <button id="headToHeadBtn" class="head-to-head">⚔️ Head to Head</button>
             <span id="lastUpdate" style="margin-left: 20px; color: #666;"></span>
         </div>
 
@@ -83,7 +84,7 @@
 
             <div class="card full-width">
                 <h2>🗓️ Score Heatmap</h2>
-                <div id="heatmapContainer" style="height: 600px; overflow-x: auto;">
+                <div id="heatmapContainer" style="height: 700px; overflow-x: auto;">
                     <div id="scoreHeatmap"></div>
                 </div>
             </div>
